# susspekt

./: Cargo.toml  Dockerfile  LICENSE  README.md  log4rs.yaml  test-server.py
src/: args.rs  bucket.rs  logdata.rs  main.rs  monitor.rs  poster.rs  rollingwindow.rs  whitelist.rs
